@@ -373,8 +373,6 @@ END MODULE spin_orb
 !
 MODULE pwcom
   !
-  USE constants, ONLY : e2, rytoev, pi, tpi, fpi
-  USE cell_base, ONLY : celldm, at, bg, alat, omega, tpiba, tpiba2, ibrav
   USE klist
   USE lsda_mod
   USE vlocal
